--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ dash-html-components==1.1.1
 dash-renderer==1.8.3
 dash-table==4.11.0
 future==0.18.2
+gunicorn==19.9.0
 idna==2.9
 itsdangerous==1.1.0
 numpy==1.19.1
